--- a/.github/workflows/llvmlite_wheels.yml
+++ b/.github/workflows/llvmlite_wheels.yml
@@ -113,10 +113,11 @@ jobs:
           CIBW_BEFORE_BUILD_LINUX: |
             set -eux
             export PATH="$HOME/miniconda3/bin:$PATH"
+            export CONDA_PLUGINS_AUTO_ACCEPT_TOS=true
             # Activate conda base environment
             source $HOME/miniconda3/etc/profile.d/conda.sh
             conda activate base
-            python -m pip install -U pip setuptools wheel
+            python -m pip install -U pip wheel
 
             # Install llvmdev using conda
             if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
@@ -130,10 +131,11 @@ jobs:
             set -eux
             # Ensure conda is available and activated
             export PATH="$HOME/miniconda3/bin:$PATH"
+            export CONDA_PLUGINS_AUTO_ACCEPT_TOS=true
             # Activate conda base environment
             source $HOME/miniconda3/etc/profile.d/conda.sh
             conda activate base
-            python -m pip install -U pip setuptools wheel
+            python -m pip install -U pip wheel
 
             # Install llvmdev using conda
             if [ "${{ inputs.llvmdev_run_id }}" != "" ]; then
@@ -146,7 +148,7 @@ jobs:
           CIBW_BEFORE_BUILD_WINDOWS: |
             # Ensure conda is available
             set PATH=C:\miniconda;C:\miniconda\Scripts;%PATH%
-            python -m pip install -U pip setuptools wheel
+            python -m pip install -U pip wheel
 
             # Install llvmdev using conda
             if "%{{ inputs.llvmdev_run_id }}" neq "" (
