--- a/.github/workflows/llvmlite_wheels.yml
+++ b/.github/workflows/llvmlite_wheels.yml
@@ -134,6 +134,7 @@ jobs:
             else
               conda install -y -c defaults "${{ env.CONDA_CHANNEL_NUMBA }}::llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}" --no-deps
             fi
+            export CMAKE_PREFIX_PATH="$HOME/miniconda3/lib/cmake/llvm/"
 
           CIBW_BEFORE_BUILD_MACOS: |
             set -eux
@@ -152,6 +153,7 @@ jobs:
             else
               conda install -y -c defaults "${{ env.CONDA_CHANNEL_NUMBA }}::llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}" --no-deps
             fi
+            export CMAKE_PREFIX_PATH="$HOME/miniconda3/lib/cmake/llvm/"
 
           CIBW_BEFORE_BUILD_WINDOWS: |
             # Ensure conda is available
@@ -164,7 +166,8 @@ jobs:
               C:\miniconda\Scripts\conda.exe install -y -c defaults -c "%CHAN%" "llvmdev=%{{ env.FALLBACK_LLVMDEV_VERSION }}" --no-deps
             ) else (
               C:\miniconda\Scripts\conda.exe install -y -c defaults "%{{ env.CONDA_CHANNEL_NUMBA }}::llvmdev=%{{ env.FALLBACK_LLVMDEV_VERSION }}" --no-deps
-            )
+            # Set CMAKE_PREFIX_PATH for LLVM CMake files
+            set CMAKE_PREFIX_PATH=C:\miniconda\lib\cmake\llvm\
 
           # Windows repair: use delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: |
