add symlinks for LLVM accessibility in CMake configuration for Linux and macOS workflows

--- a/.github/workflows/llvmlite_wheels.yml
+++ b/.github/workflows/llvmlite_wheels.yml
@@ -134,7 +134,13 @@ jobs:
             else
               conda install -y -c defaults "${{ env.CONDA_CHANNEL_NUMBA }}::llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}" --no-deps
             fi
-            export CMAKE_PREFIX_PATH="$HOME/miniconda3/lib/cmake/llvm/"
+            
+            # Create symlinks to make LLVM accessible to the build
+            mkdir -p /opt/llvm
+            ln -sf $HOME/miniconda3/lib/cmake/llvm /opt/llvm/cmake
+            ln -sf $HOME/miniconda3/lib /opt/llvm/lib
+            ln -sf $HOME/miniconda3/include /opt/llvm/include
+            export CMAKE_PREFIX_PATH="/opt/llvm/cmake"
 
           CIBW_BEFORE_BUILD_MACOS: |
             set -eux
@@ -153,7 +159,13 @@ jobs:
             else
               conda install -y -c defaults "${{ env.CONDA_CHANNEL_NUMBA }}::llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }}" --no-deps
             fi
-            export CMAKE_PREFIX_PATH="$HOME/miniconda3/lib/cmake/llvm/"
+            
+            # Create symlinks to make LLVM accessible to the build
+            sudo mkdir -p /opt/llvm
+            sudo ln -sf $HOME/miniconda3/lib/cmake/llvm /opt/llvm/cmake
+            sudo ln -sf $HOME/miniconda3/lib /opt/llvm/lib
+            sudo ln -sf $HOME/miniconda3/include /opt/llvm/include
+            export CMAKE_PREFIX_PATH="/opt/llvm/cmake"
 
           CIBW_BEFORE_BUILD_WINDOWS: |
             # Ensure conda is available
@@ -183,12 +195,12 @@ jobs:
 
           CIBW_ENVIRONMENT_LINUX: |
             LLVMLITE_PACKAGE_FORMAT=wheel
-            CMAKE_PREFIX_PATH=/root/miniconda3/lib/cmake/llvm/
+            CMAKE_PREFIX_PATH=/opt/llvm/cmake
 
           CIBW_ENVIRONMENT_MACOS: |
             LLVMLITE_PACKAGE_FORMAT=wheel
             MACOSX_DEPLOYMENT_TARGET=11.0
-            CMAKE_PREFIX_PATH=/Users/runner/miniconda3/lib/cmake/llvm/
+            CMAKE_PREFIX_PATH=/opt/llvm/cmake
 
           CIBW_ENVIRONMENT_WINDOWS: |
             LLVMLITE_PACKAGE_FORMAT=wheel
